--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 :root {
     --color-primary: #6f6af8;
     --color-danger: #da0f3f;
-    --color-white: #fffff;
+    --color-white: #ffffff;
     --color-light: #ccc;
     --color-bg: hwb(240 95% 0%);
     --color-gray-100: hsl(220, 20%, 10%, 5%);
@@ -113,3 +113,52 @@ section {
         background: var(--color-gray-900);
         color:var(--color-white);
     }
+
+ /* ------------------ BEGGIN OF THE NAV VAR ---------------------------- */
+nav{
+    background: var(--color-primary);
+    height: 5rem;
+    display: grid;
+    place-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-bottom: 4px solid var(--color-light);
+    z-index: 100;
+
+}
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    height: 100%;
+
+} 
+.nav-logo h3{
+    color:var(--color-white);
+    font-size: 1.6rem;
+    font-weight: 500;
+}
+.nav-logo h3 span {
+    color: var(--color-light);
+}
+.nav-menu{
+display: flex;
+align-items: center;
+gap: 3rem;
+}
+.nav-menu li a {
+    color: var(--color-white);
+    transition: var(--transition);
+}
+.nav-menu li a:hover{
+    color: var(--color-light);
+}
+.nav-toggle-button{
+background: transparent;
+color: var(--color-white );
+display: none;
+
+}
+/*------------------ END OF THE NAV VAR ---------------------------- */
