--- a/src/App.css
+++ b/src/App.css
@@ -246,3 +246,81 @@ footer {
 
 
 /*--------------- END ERROR PAGE -------------*/ 
+
+/*======================== Home Begin ========================*/
+.posts-container {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
+    gap: 2rem; /* Reduce el espacio entre posts */
+}
+
+.post {
+    background: var(--color-white);
+    padding: 1rem;
+    border-radius: var(--border-radius-4);
+    padding-bottom: 2rem;
+    transition: var(--transition);
+    cursor: pointer;
+    max-width: 100%;
+    /* Añadir un poco de sombra */
+}
+
+.post-image {
+    border-radius: var(--border-radius-3);
+    overflow: hidden;
+    height: 12rem; /* Ajusta la altura de las imágenes */
+}
+
+.post-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Asegura que la imagen se ajuste sin distorsiones */
+}
+
+.post:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+.post-image {
+    border-radius: var(--border-radius-3);
+    overflow: hidden;
+    height: 16rem;
+    overflow: hidden;
+  }
+  .post-image img{
+    height: 100%;
+  }
+  
+  .post-content {
+    margin-top: 1.5rem;
+  }
+  
+  .post-content h3 {
+    margin: 1rem 0 0.6rem;
+  }
+  
+  .post-footer {
+    display: flex;
+    align-items: flex-end;
+    margin-top: 2rem;
+    justify-content:  space-between;
+  }
+
+  .post-author {
+    display: flex;
+    gap: 1rem;
+    align-items: flex-start;
+  }
+  
+  .post-author-image {
+    width: 2.8rem;
+    border-radius: 50%;
+    overflow: hidden;
+    aspect-ratio: 1/1;
+    border: 4px solid var(--color-light);
+     
+  }
+  .post-author-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
