--- a/src/App.css
+++ b/src/App.css
@@ -248,10 +248,15 @@ footer {
 /*--------------- END ERROR PAGE -------------*/ 
 
 /*======================== Home Begin ========================*/
-.posts-container {
+.posts-container , .categoryPosts-container {
     display: grid;
     grid-template-columns: repeat(3, minmax(250px, 1fr));
     gap: 2rem; /* Reduce el espacio entre posts */
+}
+.authorPosts-container{
+    display: grid ;
+    grid-template-columns: repeat(2 , 1fr);
+    gap: 4rem;
 }
 
 .post {
@@ -262,13 +267,19 @@ footer {
     transition: var(--transition);
     cursor: pointer;
     max-width: 100%;
-    /* Añadir un poco de sombra */
+    height: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .post-image {
     border-radius: var(--border-radius-3);
     overflow: hidden;
     height: 12rem; /* Ajusta la altura de las imágenes */
+}
+.page-title{
+    text-align: center;
+    margin: 4rem auto;
 }
 
 .post-image img {
@@ -324,3 +335,46 @@ footer {
     height: 100%;
     object-fit: cover;
 }
+
+/* Start PostDetails */
+.PostDetail-container {
+    width: 60%;
+    padding: 2rem;
+    background: var(--color-white);
+  }
+  
+  .postdetail-top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.6rem;
+  }
+  
+  .postdetail-buttons {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+  }
+  
+  .postdtail-image {
+    margin: 1rem 0;
+    max-height: 26rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+.postdtail-image img {
+    width: 100%; /* Asegura que la imagen ocupe todo el ancho del contenedor */
+    height: auto; /* Mantiene las proporciones */
+    object-fit: cover; /* Ajusta la imagen dentro del contenedor sin distorsiones */
+}
+.postdtail-para {
+    margin: 1rem 0;
+    color: var(--color-gray-700);
+    line-height: 1.6; /* Para una lectura cómoda */
+    word-wrap: break-word; /* Fuerza que el texto se ajuste al contenedor */
+    overflow-wrap: break-word; /* Rompe el texto en caso de palabras largas */
+    max-width: 100%; /* Asegura que el ancho máximo sea el del contenedor */
+}
+
+  /* End PostDetails */
