--- a/src/App.css
+++ b/src/App.css
@@ -248,133 +248,151 @@ footer {
 /*--------------- END ERROR PAGE -------------*/ 
 
 /*======================== Home Begin ========================*/
-.posts-container , .categoryPosts-container {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(250px, 1fr));
-    gap: 2rem; /* Reduce el espacio entre posts */
+.posts-container, .categoryPosts-container {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(250px, 1fr));
+  gap: 2rem; /* Reduce el espacio entre posts */
 }
-.authorPosts-container{
-    display: grid ;
-    grid-template-columns: repeat(2 , 1fr);
-    gap: 4rem;
+
+.authorPosts-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 4rem;
+}
+
+
+.head-post-container {
+display: grid;
+grid-template-columns: 2fr 1fr; /* Imagen: dos tercios, texto: un tercio */
+gap: 4rem;
+padding-top: 3rem;
+align-items: center;
+margin-bottom: 4rem;
+background: var(--color-white);
+margin-bottom: 4rem;
 }
 
 .post {
-    background: var(--color-white);
-    padding: 1rem;
-    border-radius: var(--border-radius-4);
-    padding-bottom: 2rem;
-    transition: var(--transition);
-    cursor: pointer;
-    max-width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
+  background: var(--color-white);
+  padding: 1rem;
+  border-radius: var(--border-radius-4);
+  padding-bottom: 2rem;
+  transition: var(--transition);
+  cursor: pointer;
+  max-width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .post-image {
-    border-radius: var(--border-radius-3);
-    overflow: hidden;
-    height: 12rem; /* Ajusta la altura de las imágenes */
-}
-.page-title{
-    text-align: center;
-    margin: 4rem auto;
+  border-radius: var(--border-radius-3);
+  overflow: hidden;
+  height: 16rem;
 }
 
 .post-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Asegura que la imagen se ajuste sin distorsiones */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.post:hover{
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+.post-content-head {
+  display: flex;
+  flex-direction: column; /* Alinea los elementos verticalmente */
+  align-items: center; /* Centra horizontalmente */
+  text-align: center; /* Centra el texto */
+  padding: 1rem; /* Añade un poco de espacio alrededor del contenido */
 }
-.post-image {
-    border-radius: var(--border-radius-3);
-    overflow: hidden;
-    height: 16rem;
-    overflow: hidden;
-  }
-  .post-image img{
-    height: 100%;
-  }
-  
-  .post-content {
-    margin-top: 1.5rem;
-  }
-  
-  .post-content h3 {
-    margin: 1rem 0 0.6rem;
-  }
-  
-  .post-footer {
-    display: flex;
-    align-items: flex-end;
-    margin-top: 2rem;
-    justify-content:  space-between;
-  }
 
-  .post-author {
-    display: flex;
-    gap: 1rem;
-    align-items: flex-start;
-  }
-  
-  .post-author-image {
-    width: 2.8rem;
-    border-radius: 50%;
-    overflow: hidden;
-    aspect-ratio: 1/1;
-    border: 4px solid var(--color-light);
-     
-  }
-  .post-author-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.post-content h3 {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  color: var(--color-primary);
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+}
+
+.post-content p {
+  font-size: 1rem;
+  line-height: 1.5;
+  color: var(--color-gray-900);
+  margin: 0;
+  padding: 0.5rem 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+
+.post-footer {
+  display: flex;
+  align-items: flex-end;
+  margin-top: 2rem;
+  justify-content: space-between;
+}
+
+.post-author {
+  display: flex;
+  gap: 1rem;
+  align-items: flex-start;
+}
+
+.post-author-image {
+  width: 2.8rem;
+  border-radius: 50%;
+  overflow: hidden;
+  aspect-ratio: 1/1;
+  border: 4px solid var(--color-light);
+}
+
+.post-author-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* Start PostDetails */
 .PostDetail-container {
-    width: 60%;
-    padding: 2rem;
-    background: var(--color-white);
-  }
-  
-  .postdetail-top {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.6rem;
-  }
-  
-  .postdetail-buttons {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-  }
-  
-  .postdtail-image {
-    margin: 1rem 0;
-    max-height: 26rem;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
+  width: 60%;
+  padding: 2rem;
+  background: var(--color-white);
+}
+
+.postdetail-top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.6rem;
+}
+
+.postdetail-buttons {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.postdtail-image {
+  margin: 1rem 0;
+  max-height: 26rem;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .postdtail-image img {
-    width: 100%; /* Asegura que la imagen ocupe todo el ancho del contenedor */
-    height: auto; /* Mantiene las proporciones */
-    object-fit: cover; /* Ajusta la imagen dentro del contenedor sin distorsiones */
-}
-.postdtail-para {
-    margin: 1rem 0;
-    color: var(--color-gray-700);
-    line-height: 1.6; /* Para una lectura cómoda */
-    word-wrap: break-word; /* Fuerza que el texto se ajuste al contenedor */
-    overflow-wrap: break-word; /* Rompe el texto en caso de palabras largas */
-    max-width: 100%; /* Asegura que el ancho máximo sea el del contenedor */
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
-  /* End PostDetails */
+.postdtail-para {
+  margin: 1rem 0;
+  color: var(--color-gray-700);
+  line-height: 1.6;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  max-width: 100%;
+}
+/* End PostDetails */
