--- a/src/App.css
+++ b/src/App.css
@@ -661,4 +661,52 @@ color: var(--color-danger);
   background: var(--color-white);
   height: 19rem !important;
 }
+.editPosts-container{
+  margin-top: 2rem;}
 /*============================ End´s QL Editor =========================================*/
+
+/*============================ Star`s Media Screen =========================================*/
+
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 1.5rem !important;
+  }
+
+  h2 {
+    font-size: 1.4rem !important;
+  }
+
+
+/* ... Nav ... */
+
+.nav-container {
+  position: relative;
+  height: 100%;
+}
+.nav-menu {
+  position: absolute;
+  top: 5rem;
+  display: flex;
+  gap: 0;
+  right: 0;
+  flex-direction: column;
+}
+
+.nav-menu li {
+  width: 100%;
+  box-shadow: -2rem 4rem 4rem rgba(0, 0, 0, 0.26);
+}
+
+.nav-menu li a {
+  display: block;
+  background: var(--color-primary);
+  padding: 1.4rem 4.2rem;
+}
+
+.nav-toggle-button {
+  display: inline-block;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+}
+/*============================ End`s Media Screen =========================================*/
